--- a/code/build
+++ b/code/build
@@ -7,37 +7,20 @@ cd ..
 mode=$1
 version=$2
 site=${mode}.rabbitmq.com
-site_dir=/srv/${site}
+site_dir=srv/${site}
 
 if [ $mode = www ] ; then
-    community_plugins_dir=/home/rabbitmq/extras/community-plugins/
-    releases_dir=/home/rabbitmq/extras/releases/
-
-    # Which user to mirror feeds as?  Default to the rabbitmq user, who by
-    # convention owns the release deliverables dir.
-    mirror_user=rabbitmq
-    if ! id -u "$mirror_user" >/dev/null 2>&1 ; then
-    # Otherwise, try the user running sudo deploy
-        mirror_user="$SUDO_USER"
-        if ! id -u "$mirror_user" >/dev/null 2>&1 ; then
-            echo "Not sure which user to mirror feeds as" 1>&2
-            exit 1
-        fi
-    fi
-
-    echo "Feeds will be mirrored by the user $mirror_user" 1>&2
-
-    # Find the corresponding group
-    mirror_group=$(id -ng $mirror_user)
+    community_plugins_dir=home/rabbitmq/extras/community-plugins/
+    releases_dir=home/rabbitmq/extras/releases/
 
     xsltproc --novalid site/feed-atom.xsl site/news.xml > site/news.atom
 
     mkdir -p ${community_plugins_dir}
     ./code/find-community-plugins ${community_plugins_dir} site
 elif [ $mode = previous ] ; then
-    releases_dir=/home/rabbitmq/extras/releases/
+    releases_dir=home/rabbitmq/extras/releases/
 else
-    releases_dir=/home/rabbitmq/extras/nightlies/
+    releases_dir=home/rabbitmq/extras/nightlies/
 fi
 
 old_dir=`mktemp -d`
@@ -46,7 +29,6 @@ build_dir=`mktemp -d`
 rm -rf $site_dir/site-src $site_dir/code ${build_dir}
 
 mkdir -p $site_dir $site_dir/feeds
-chown -R $mirror_user.$mirror_group $site_dir/feeds
 cp -r code $site_dir
 cp -r site $site_dir/site-src
 
@@ -74,14 +56,6 @@ mv part00 ${build_dir}/templates/index-header.html
 tail -n +2 part01 > ${build_dir}/templates/index-footer.html
 rm ${build_dir}/templates/index.html part*
 
-if [ $mode = www ] ; then
-    chown $mirror_user:$mirror_group ${build_dir}/index.html
-    if [ -d /usr/share/wordpress/wp-content/themes/rabbitmq ]; then
-        rm -rf /usr/share/wordpress/wp-content/themes/rabbitmq
-        cp -r wordpress-theme /usr/share/wordpress/wp-content/themes/rabbitmq
-    fi
-fi
-
 cp conf/robots.txt-${mode} ${build_dir}/robots.txt
 
 if [ -d ${site_dir}/site/${version} ] ; then
@@ -95,18 +69,4 @@ else
     mv ${build_dir} ${site_dir}/site
 fi
 
-if [ -d /etc/apache2/sites-available/ ]; then
-    cp conf/${site}* /etc/apache2/sites-available/
-    a2ensite ${site}
-    /etc/init.d/apache2 reload
-fi
-
 rm -rf ${old_dir}
-
-if [ $mode = www ] ; then
-    if [ ! -e /etc/apache2/sites-enabled/www.rabbitmq.com-ssl ]; then
-        echo "*** Note site www.rabbitmq.com-ssl is not enabled. Please enable manually if necessary. ***"
-    fi
-
-    sed "s|@USER@|$mirror_user|" <conf/refresh-site.cron >/etc/cron.d/refresh-site
-fi
